--- a/gruz.web/src/main/webapp/redirect.html
+++ b/gruz.web/src/main/webapp/redirect.html
@@ -1,3 +1,5 @@
 <html>
-<head><meta http-equiv="Refresh" content="0;URL=home.htm"></head>
+<head>
+    <meta http-equiv="Refresh" content="0;URL=home.htm">
+</head>
 </html>
