--- a/trunk/gruz.web/src/main/webapp/template.htm
+++ b/trunk/gruz.web/src/main/webapp/template.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
-    <title>Gruz - $title</title>
-    <link rel="stylesheet" type="text/css" href="$context/css/style.css" title="Style"/>
+    <title>Gruz:$title</title>
+    <link rel="stylesheet" type="text/css" href="$context/css/style.css"/>
 </head>
 
 <body>
@@ -12,6 +12,9 @@
 
 <div id="container">
     #parse($path)
+</div>
+
+<div id="footer">
 </div>
 
 </body>
