--- a/gruz.web/src/main/webapp/home.htm
+++ b/gruz.web/src/main/webapp/home.htm
@@ -1,1 +1,3 @@
-<b>Welcome</b> to Home page your application starting point. 
+<div>Hello world from Gruz at $time by $messages.author</div>
+<div>version = $messages.version</div>
+<div>email = $messages.email</div>
